# cmm-script

./: .gitignore  CMakeLists.txt  Makefile  README.md  char_utils.h  cmm.cpp  data.cpp  data.h  error.h  expression.cpp  expression.h  funs.cpp  funs.h  operand.cpp  operand.h  script.cpp  script.h  test_char_utils.cpp  test_expression.cpp
.github/workflows/: cmake.yml  make.yml
examples/: hanoi.cmm  magic.cmm  mul_table.cmm  nine_circle.cmm  prime.cmm
